--- a/index.html
+++ b/index.html
@@ -26,51 +26,21 @@
     
   </nav>
   <header>
-            <h1>Discover Madrid</h1>
-            <span>
-                "It takes a lot of imagination to be a good photographer. You need less imagination to be a painter because you can invent things. But in photography everything is so ordinary; it takes a lot of looking before you learn to see the extraordinary."<i> David Bailey</i>
-            </span>
-        </span>
-  </header>
+  <div class="card bg-dark text-white">
+    <img src="..." class="card-img" alt="...">
+    <div class="card-img-overlay">
+      <h5 class="card-title">Discover Madrid</h5>
+      <p class="card-text"> "It takes a lot of imagination to be a good photographer. You need less imagination to be a painter because you can invent things. But in photography everything is so ordinary; it takes a lot of looking before you learn to see the extraordinary."<i> David Bailey</i></p>
+    </div>
+  </div>
+</header>
 
   <main>
 
   </main>
 
   <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <ul class="list-inline text-center">
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-          </ul>
-          <p class="copyright text-muted">Copyright &copy; Our Website 2019 made in <a href="https://wildcodeschool.es/">Wild Code School</a></p>
-        </div>
-      </div>
-    </div>
+    
   </footer>
 
     <script src="vendor/jquery/jquery.min.js"></script>
