--- a/index.html
+++ b/index.html
@@ -10,25 +10,29 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light navbar-bg">
-            <a class="navbar-brand" href="gallery.html">Blog Madrid</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                            <li class="nav-item">
-                                    <a class="nav-link" href="#">Home</a>
-                                  </li>
+        <a class="navbar-brand" href="gallery.html">Blog Madrid</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                                <a class="nav-link" href="index.html">Home</a>
+                              </li>
 
+                              <li class="nav-item">
+                                    <a class="nav-link" href="about.html">About Me</a>
+                                  </li>
                                   <li class="nav-item">
-                                        <a class="nav-link" href="#">About Me</a>
+                                        <a class="nav-link" href="gallery.html">Gallery</a>
                                       </li>
                                       <li class="nav-item">
-                                            <a class="nav-link" href="#">Gallery</a>
-                                          </li>
+                                        <a class="nav-link" href="contact.html">Contact</a>
+                                      </li>
 
-    
-  </nav>
+
+</nav>
+
   
   <header class="masthead" style="background-image: url(https://static1.squarespace.com/static/5627abbd57ccf64247455a2a/5aae7219575d1f89f2d99ab5/5aae72861ae6cf0c78ccc3fc/1521382068427/DSC03032.jpg?format=2500w)">
     <div class="overlay"></div>
