Added header image to Contact Page

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,24 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Contact</title>
 </head>
+
+<header class="masthead" style="background-image: url(https://static1.squarespace.com/static/5627abbd57ccf64247455a2a/5aae7219575d1f89f2d99ab5/5aae72861ae6cf0c78ccc3fc/1521382068427/DSC03032.jpg?format=2500w)">
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <div class="site-heading">
+            <h1>Discover Madrid</h1>
+            <span class="subheading">
+                "Asami is baller."<i>-Her teammates</i>
+            </span>
+             </span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+
 <body>
 <section class="mb-4">
 
