--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Discover Madrid</h1>
+            <h1>Contact Wildo</h1>
             <span class="subheading">
                 "Asami is baller."<i>-Her teammates</i>
             </span>
