PictureNameChanges and CSSnavBAR Styling

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
   <!-- Grid column -->
   <div class="mb-3 pics animation all 2">
-    <img class="img-fluid" src="https://img.freepik.com/foto-gratis/grupo-turistico-amistad-caminar-viaje-ciudad_1150-4305.jpg?size=626&ext=jpg" alt="Tourists">
+    <img class="img-fluid" src="img folder\tourists.jpg" alt="Tourists">
     <div class="details">
       <div class="content">
       <h2>Tourists</h2>
@@ -106,7 +106,7 @@
 
   <!-- Grid column -->
   <div class="mb-3 pics animation all 1">
-    <img class="img-fluid" src="https://image.freepik.com/foto-gratis/palacio-comunicacion-atardecer-verano-madrid_1398-2169.jpg" alt="Banco España">
+    <img class="img-fluid" src="img folder\palacio.jpg" alt="Banco España">
     <div class="details">
         <div class="content">
         <h2>Palacio de Cibeles</h2>
@@ -118,7 +118,7 @@
 
   <!-- Grid column -->
   <div class="mb-3 pics animation all 1">
-    <img class="img-fluid" src="https://image.freepik.com/foto-gratis/cruce-calle-alcala-gran-via-noche_1398-2173.jpg" alt="Metropolis building Gran-Via">
+    <img class="img-fluid" src="img folder\metropolis.jpg" alt="Metropolis building Gran-Via">
         <div class="details">
         <div class="content">
         <h2>Metropolis Building</h2>
@@ -130,7 +130,7 @@
 
   <!-- Grid column -->
   <div class="mb-3 pics animation all 2">
-    <img class="img-fluid" src="https://image.freepik.com/foto-gratis/templo-debod-iluminado-madrid_1139-78.jpg" alt="Templo Debod" height="400">
+    <img class="img-fluid" src="img folder\templodebod.jpg" alt="Templo Debod" height="400">
     <div class="details">
         <div class="content">
         <h2>Templo De Debod</h2>
@@ -142,7 +142,7 @@
 
   <!-- Grid column -->
   <div class="mb-3 pics animation all 2">
-    <img class="img-fluid" src="https://image.freepik.com/foto-gratis/estatua-oso-madrono-tree-madrid-espana_1398-4110.jpg" alt="Card image cap">
+    <img class="img-fluid" src="img folder\estatua-oso-madrono-tree-madrid-espana_1398-4110.jpg" alt="Card image cap">
     <div class="details">
         <div class="content">
         <h2>Oso y el Madroño</h2>
@@ -154,7 +154,7 @@
 
   <!-- Grid column -->
   <div class="mb-3 pics animation all 1">
-    <img class="img-fluid" src="https://image.freepik.com/foto-gratis/arco-plaza-mayor-madrid_1398-2690.jpg" alt="Plaza Mayor">
+    <img class="img-fluid" src="img folder\plazamayor.jpg" alt="Plaza Mayor">
     <div class="details">
         <div class="content">
         <h2>Plaza Mayor</h2>
@@ -166,7 +166,7 @@
 
   <!-- Grid column -->
   <div class="mb-3 pics animation all 1">
-    <img class="img-fluid" src="https://static1.squarespace.com/static/5627abbd57ccf64247455a2a/5aae7219575d1f89f2d99ab5/5aae7389352f533ca560bb5b/1521382295674/DSC03311.jpg?format=2500w" alt="Taxi">
+    <img class="img-fluid" src="img folder\taxi.jpg" alt="Taxi">
     <div class="details">
         <div class="content">
         <h2>Taxi</h2>
@@ -177,7 +177,7 @@
   <!-- Grid column -->
   <!-- Grid column -->
   <div class="mb-3 pics animation all 1">
-    <img class="img-fluid" src="https://static1.squarespace.com/static/5627abbd57ccf64247455a2a/5aae7219575d1f89f2d99ab5/5aae7393aa4a99e0218e3ddc/1521382330584/DSC03332.jpg?format=2500w" alt="Bird graffiti">
+    <img class="img-fluid" src="img folder\malasana.jpg" alt="Bird graffiti">
     <div class="details">
         <div class="content">
         <h2>Malasaña</h2>
@@ -199,7 +199,7 @@
   <!-- Grid column -->
   <!-- Grid column -->
   <div class="mb-3 pics animation all 1">
-    <img class="img-fluid" src="https://images.unsplash.com/photo-1549355238-8ca5c7e3c3b3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="The Royal palace">
+    <img class="img-fluid" src="img folder\frontpalace.jpg" alt="The Royal palace">
     <div class="details">
         <div class="content">
         <h2>Royal Palace</h2>
