dermot pic about page

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
    </div>
 <hr>
    <div class="card mb-3">
-    <img class="card-img-top" src="img folder/DSC03332.jpg" alt="Card image cap">
+    <img class="card-img-top" src="img folder/Picture_Dermot_About_Page.jpg" alt="Card image cap">
     <div class="card-body">
       <hr>
       <h5 class="card-title"><strong>First post </strong>3.04.2019</h5>
