--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <title>Contact</title>
 </head>
 
-<body>
+<body class="contact-us">
 
         <nav class="navbar navbar-expand-lg navbar-light navbar-bg">
                 <a class="navbar-brand" href="index.html"><strong>Blog Madrid</strong></a>
