--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <div class="details">
         <div class="content">
         <h2>Taxi</h2>
-        <p>If your feet are sore from walking the taxi service of Madrid is the best alternative to viewing the city. Be sure to go soon as the city centre aims to become fully peatonal by 2021!</p>
+        <p>If your feet are sore from walking the taxi service of Madrid is the best alternative to viewing the city. </p>
       </div>
       </div>
   </div>
