--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
   <!-- Grid column -->
   <div class="mb-3 pics animation all 2">
-    <img class="img-fluid" src="img folder\templodebod.jpg" alt="Templo Debod" height="400">
+    <img class="img-fluid" src="/Users/alenanikolaeva/Documents/GitHub/New_Project_One/img folder/templo_de_debod_3.jpg" alt="Templo Debod" height="400">
     <div class="details">
         <div class="content">
         <h2>Templo De Debod</h2>
