changes to background gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -41,9 +41,10 @@
                                   </li>
  </nav>
  <!--Carousel Gallery Pictures-->
- <h1 class="galleryTittle">Gallery</h1>
-    <div class="gcontainer">
-       <div id="madridCarousel" class="carousel slide" data-ride="carousel">
+    <div class="gcontainer"></div> 
+      <img class="gbackground" src="img folder\backdrop-grey.jpg" alt="background picture">
+      <h1 class="galleryTittle">Gallery</h1> 
+      <div id="madridCarousel" class="carousel slide" data-ride="carousel">
          <div class="carousel-inner">
              <div class="carousel-item active">
               <img src="img folder\callealcala.jpg" alt="calle alcala madrid" data-holder-render="true">
@@ -61,7 +62,7 @@
               <img src="img folder\granviaschweppes.jpg" alt="gran via schweppes madrid" data-holder-render="true">
             </div>
          </div>
-         <!--arrows inside carousel-->
+         <!--carousel controllers-->
          <a class="carousel-control-prev" href="#madridCarousel" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
@@ -72,7 +73,7 @@
           </a>
       </div>
  </div>
- 
+ <br>
  <footer>
     <div class="container">
       <div class="row">
