--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
         
         </nav>
         <body class="contact-me">
-        <header class="masthead" style="background-image: url(img%20folder/DSC_0113.jpg)">
+        <header class="masthead" style="background-image: url('https://i.ibb.co/yftgCtQ/DSC-0113.jpg')">
             <div class="overlay"></div>
             <div class="container">
               <div class="row">
